fix: fix modal on small devices

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ body {
 }
 
 .modal h2 {
-  font-size: 4rem;
+  font-size: 2.8rem;
   text-align: center;
   margin: 1rem;
   font-family: 'Pacifico', cursive;
@@ -237,6 +237,11 @@ body {
   background-color: var(--red);
 }
 
+.overflowHidden {
+  overflow: hidden;
+  height: 100vh;
+}
+
 @media screen and (min-width: 800px) {
   .main {
     padding: 2rem;
@@ -249,6 +254,10 @@ body {
 
   .button {
     font-size: 1.4rem;
+  }
+
+  .modal h2 {
+    font-size: 4rem;
   }
 }
 
